Refactoring attributes
